sdk/tests/compile-fail/accounts_list_missing.stderr
error: missing accounts list
 --> $DIR/accounts_list_missing.rs:9:7
  |
9 |     #[accounts]
  |       ^^^^^^^^
